// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render green text 1`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: bottom;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  line-height: 1.4;
  font-weight: 400;
  font-size: 16px;
  color: rgb(78,210,164);
}

.emotion-1:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-1 strong {
  font-weight: 500;
}

<span
  className="emotion-0 emotion-1"
  color="green"
  onClick={undefined}
  size="medium"
  style={Object {}}
>
  Hello World
</span>
`;

exports[`Text should render large text 1`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: bottom;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  line-height: 1.4;
  font-weight: 400;
  font-size: 18px;
  color: rgb(48,44,80);
}

.emotion-1:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-1 strong {
  font-weight: 500;
}

<span
  className="emotion-0 emotion-1"
  color="charcoal"
  onClick={undefined}
  size="large"
  style={Object {}}
>
  Hello World
</span>
`;

exports[`Text should render shallow component ok 1`] = `
.emotion-1 {
  display: inline-block;
  vertical-align: bottom;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  text-align: unset;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  line-height: 1.4;
  font-weight: 400;
  font-size: 16px;
  color: rgb(48,44,80);
}

.emotion-1:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
}

.emotion-1 strong {
  font-weight: 500;
}

<span
  className="emotion-0 emotion-1"
  color="charcoal"
  onClick={undefined}
  size="medium"
  style={Object {}}
>
  Hello World
</span>
`;
